package snapshot;

message ExtendValue {
	required string		name = 1;
	required string		value = 2;
}

message SnapshotBegion {
	repeated ExtendValue		extends = 1;
}

message SnapshotEnd {
	repeated ExtendValue		extends = 1;
}

message PartitionBegin {
	optional string				uuid = 1;
	optional uint32				version = 2;
	repeated ExtendValue		extends = 3;
}

message PartitionEnd {
	optional string				uuid = 1;
	optional uint32				version = 2;
	repeated ExtendValue		extends = 3;
}

message Item {
	optional string				part = 1;
	optional string				uuid = 2;
	optional string				type = 3;
	repeated ExtendValue		extends = 4;
}
